ajustes para o front e padrões da documentação
